--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
+    "build": "node build/build.js"
   },
   "dependencies": {
-    "push-dir": "^0.4.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
